<resources>
    <string name="module_mine_mine_name">module-mine</string>
    <string name="module_mine_welcome">欢迎您！</string>
    <string name="module_mine_log_in">登录</string>
    <string name="module_mine_please_enter_phone_number">请输入手机号</string>
    <string name="module_mine_please_enter_log_in_password">请输入登录密码</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="module_mine_login_failed_tips">登录失败，手机号或登录密码有误，请检查</string>
    <string name="module_mine_forget_password_tips">若忘记登录密码，请与综合管理部联系！</string>
    <string name="module_mine_working_time">今天是你在中科大旗的第%1$d天</string>
    <string name="module_mine_today">今天</string>
    <string name="module_mine_tomorrow">明天</string>
    <string name="module_mine_sunday">星期天</string>
    <string name="module_mine_monday">星期一</string>
    <string name="module_mine_tuesday">星期二</string>
    <string name="module_mine_wednesday">星期三</string>
    <string name="module_mine_thursday">星期四</string>
    <string name="module_mine_friday">星期五</string>
    <string name="module_mine_saturday">星期六</string>
    <string name="module_mine_year">年</string>
    <string name="module_mine_month">月</string>
    <string name="module_mine_day">日</string>
    <string name="module_mine_calendar_title">%1$s %2$s年%3$s月%4$s日</string>
    <string name="module_mine_clock_in_today">今日打卡</string>
    <string name="module_mine_start_work_time">上班打卡时间</string>
    <string name="module_mine_end_work_time">下班打卡时间</string>
    <string name="module_mine_meeting_total">%1$s有%2$d场会议</string>
    <string name="module_mine_task_today">今天的任务</string>
    <string name="module_mine_task_tomorrow">明天的任务</string>
    <string name="module_mine_create_by_yourself">自己新增</string>
    <string name="module_mine_assigned_by_others">TA人分配</string>
    <string name="module_mine_need_to_be_completed_today">需今日完成</string>
    <string name="module_mine_need_to_be_completed_tomorrow">需明日完成</string>
    <string name="module_mine_completed_today">今日已完成</string>
    <string name="module_mine_total_time">共耗时：%1$sh</string>
    <string name="module_mine_department_attendance">部门考勤</string>
    <string name="module_mine_come_the_earliest_today">今天来得最早</string>
    <string name="module_mine_come_late_today">今天走得最晚</string>
    <string name="module_mine_leave_total">%1$s你的 %2$d 位小伙伴请假</string>
    <string name="module_mine_abnormal_total">%1$s你的 %2$d 位小伙伴考勤异常</string>
    <string name="module_mine_personal_information_configuration">个人信息配置</string>
    <string name="module_mine_avatar">头像</string>
    <string name="module_mine_phone_number">手机号</string>
    <string name="module_mine_mailbox">邮箱</string>
    <string name="module_mine_ethnic">民族</string>
    <string name="module_mine_politics">政治面貌</string>
    <string name="module_mine_birthday">生日</string>
    <string name="module_mine_address">现住地址</string>
    <string name="module_mine_interest">兴趣爱好</string>
    <string name="module_mine_login_password">登录密码</string>
    <string name="module_mine_modify_login_password">修改登录密码</string>
    <string name="module_mine_secondary_password">二级密码</string>
    <string name="module_mine_modify_secondary_password">修改二级密码</string>
    <string name="module_mine_sign_out">退出登录</string>
    <string name="module_mine_lunar_calendar">农历</string>
    <string name="module_mine_national_calendar">国历</string>
    <string name="module_mine_save">保存</string>
    <string name="module_mine_province_city_district">省市区</string>
    <string name="module_mine_street_number">街道门牌号</string>
    <string name="module_mine_please_choose">请选择</string>
    <string name="module_mine_please_choose_city">请选择城市</string>
    <string name="module_mine_please_enter_detailed_address">请输入详细地址</string>
    <string name="module_mine_your_favorite">你最热爱的...</string>
    <string name="module_mine_secondary_password_tips">注：二级密码主要用于查看工资条、薪资结构、任职等级等敏感数据。</string>
    <string name="module_mine_please_enter_original_password">请输入登录密码</string>
    <string name="module_mine_please_enter_new_password">请输入新密码</string>
    <string name="module_mine_please_confirm_new_password">请确认新密码</string>
    <string name="module_mine_old_password">原密码</string>
    <string name="module_mine_tips">提示</string>
    <string name="module_mine_permission_tips">请授予相关权限以便更好地为您提供服务</string>
    <string name="module_mine_sign_out_tips">确定要退出系统？</string>
    <string name="module_mine_password_reset_complete">密码修改成功</string>
    <string name="module_mine_work">工作日</string>
    <string name="module_mine_rest">休息日</string>
    <string name="module_mine_holiday">节假日</string>
    <string name="module_mine_dash">-</string>
    <string name="module_mine_no_meetings_yet">暂时没有会议哟！</string>
    <string name="meeting_time_and_content">%1$s至%2$s  %3$s</string>

</resources>