<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ResourceName">

    <data>

        <import type="com.daqsoft.module_mine.R" />

        <variable
            name="viewModel"
            type="com.daqsoft.module_mine.viewmodel.itemviewmodel.WorkClockItemViewModel" />

    </data>

    <com.ruffian.library.widget.RConstraintLayout
        app:background_normal="@color/white_ffffff"
        app:corner_radius="13dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

       <TextView
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:id="@+id/clock_in_today"
           android:textStyle="bold"
           android:textColor="@color/black_333333"
           android:textSize="19sp"
           android:text="@string/module_mine_clock_in_today"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
       </TextView>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.constraintlayout.widget.Guideline>


        <TextView
            app:layout_constraintRight_toLeftOf="@+id/guide_line"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/clock_in_today"
            android:textSize="23sp"
            android:textColor="@color/black_333333"
            android:textStyle="bold"
            android:text="@{viewModel.startWork}"
            android:id="@+id/start_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:text="@string/module_mine_start_work_time"
            app:layout_constraintRight_toLeftOf="@+id/guide_line"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/start_work"
            android:textColor="@color/gray_999999"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>


        <TextView
            app:layout_constraintLeft_toRightOf="@+id/guide_line"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/clock_in_today"
            android:textSize="23sp"
            android:textColor="@color/black_333333"
            android:textStyle="bold"
            android:text="@{viewModel.offWork}"
            android:id="@+id/end_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:text="@string/module_mine_end_work_time"
            app:layout_constraintLeft_toRightOf="@+id/guide_line"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@id/start_work"
            android:textColor="@color/gray_999999"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </com.ruffian.library.widget.RConstraintLayout>


</layout>


